; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuim68k.c_yui_m68k_breakpoint_handler.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuim68k.c_yui_m68k_breakpoint_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@yui = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @yui_m68k_breakpoint_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @yui_m68k_breakpoint_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @yui, align 4
  %6 = call i32 @yui_window_pause(i32 %5)
  %7 = load i32, i32* @yui, align 4
  %8 = call i32 @yui_m68k_new(i32 %7)
  %9 = call i32* @YUI_M68K(i32 %8)
  store i32* %9, i32** %4, align 8
  %10 = call i32 @M68KGetRegisters(%struct.TYPE_4__* %3)
  %11 = load i32*, i32** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @yui_m68k_update_codelist(i32* %11, i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @yui_m68k_update_reglist(i32* %15, %struct.TYPE_4__* %3)
  %17 = call i32 (...) @debugPauseLoop()
  ret void
}

declare dso_local i32 @yui_window_pause(i32) #1

declare dso_local i32* @YUI_M68K(i32) #1

declare dso_local i32 @yui_m68k_new(i32) #1

declare dso_local i32 @M68KGetRegisters(%struct.TYPE_4__*) #1

declare dso_local i32 @yui_m68k_update_codelist(i32*, i32) #1

declare dso_local i32 @yui_m68k_update_reglist(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @debugPauseLoop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
